Add endpoint to the most popular parameters
